Reduced font size to fix overflows in small screens

--- a/assets/css/_globals.scss
+++ b/assets/css/_globals.scss
@@ -6,7 +6,7 @@ html, body {
 }
 
 html {
-	font-size: 120%;
+	font-size: 110%;
 }
 
 body {
