--- a/project/home/assets/css/home.scss
+++ b/project/home/assets/css/home.scss
@@ -318,7 +318,7 @@ article.home {
       &__item {
         line-height:40px;
         margin:0;
-        padding-left: 15rem;
+        padding-left: 17rem;
       }
     }
   }
